--- a/samples/Asteroids/Asteroids.vcxproj
+++ b/samples/Asteroids/Asteroids.vcxproj
@@ -197,13 +197,15 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="Asteroids_TemporaryKey.pfx" />
-    <None Include="dlls\ARM\d3dcompiler_46.dll">
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</DeploymentContent>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</DeploymentContent>
-    </None>
     <None Include="dlls\Win32\D3Dcompiler_46.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</DeploymentContent>
+      <Link>%(OutputDir)%(FileName)%(Extension)</Link>
+    </None>
+    <None Include="dlls\ARM\D3Dcompiler_46.dll">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</DeploymentContent>
+      <Link>%(OutputDir)%(FileName)%(Extension)</Link>
     </None>
   </ItemGroup>
   <ItemGroup>
