--- a/src/compiler/translator_hlsl_winrt.vcxproj
+++ b/src/compiler/translator_hlsl_winrt.vcxproj
@@ -93,26 +93,32 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Configuration)\hlsl\</IntDir>
+    <TargetName>translator_hlsl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Configuration)\hlsl\</IntDir>
+    <TargetName>translator_hlsl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <TargetName>translator_hlsl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <TargetName>translator_hlsl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <TargetName>translator_hlsl</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>$(Platform)\$(Configuration)\hlsl\</IntDir>
+    <TargetName>translator_hlsl</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
