--- a/samples/Asteroids/Asteroids.vcxproj.filters
+++ b/samples/Asteroids/Asteroids.vcxproj.filters
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Asteroids_TemporaryKey.pfx" />
-    <None Include="Win32-dlls\D3Dcompiler_46.dll" />
+    <None Include="dlls\Win32\D3Dcompiler_46.dll" />
+    <None Include="dlls\ARM\D3Dcompiler_46.dll" />
   </ItemGroup>
 </Project>
